[package]
name = "synchronous-server"
version = "0.1.7"
edition = "2021"
description = "Low level synchronous server"
authors = ["Sergey Kolmiller <uyem.ru@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["http", "synchronous", "tcp"]
categories = ["network-programming"]
repository = "https://github.com/kolserdav/synchronous-server"
include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs", "/examples/*.rs", "src/**/*.rs"]
rust-version = "1.74"

[dependencies]
#proxy-server = { path = "../proxy-server" }
proxy-server = { version="0.6.0" }

[[example]]
name = "hello-world"

[features]
napi = ["proxy-server/napi"]
