[package]
name = "synchronous-server"
version = "0.1.11"
edition = "2021"
description = "Low level synchronous server"
authors = ["Sergey Kolmiller <uyem.ru@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["http", "synchronous", "tcp"]
categories = ["network-programming"]
repository = "https://github.com/kolserdav/synchronous-server"
include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs", "/examples/*.rs", "src/**/*.rs"]
rust-version = "1.74"

[dependencies]
#proxy-server = { path = "../proxy-server" }
proxy-server = { version="0.6.4" }

[[example]]
name = "hello-world"

[features]
napi = ["proxy-server/napi"]
chunk_1KB = ["proxy-server/chunk_1KB"]
chunk_5KB = ["proxy-server/chunk_5KB"]
chunk_10KB = ["proxy-server/chunk_10KB"]
chunk_50KB = ["proxy-server/chunk_50KB"]
chunk_100KB = ["proxy-server/chunk_100KB"]
chunk_500KB = ["proxy-server/chunk_500KB"]
chunk_1MB = ["proxy-server/chunk_1MB"]